# banana_ws

./: .gitignore  README.md  SETUP.md
src/banana_bridge/: package.xml  requirements.txt  setup.cfg  setup.py
src/banana_bridge/banana_bridge/: README.md  app.py
src/banana_bridge/banana_bridge/backend/: base.py  fake.py  ros.py
src/banana_bridge/banana_bridge/domain/: llm.py  schema.py  state.py
src/banana_bridge/banana_bridge/transport/: dispatch.py  gateway.py  webrtc.py
src/banana_bridge/config/: bridge.yaml
src/banana_bridge/launch/: bridge.launch.py  l2_integration.launch.py
src/banana_command/: CMakeLists.txt  INTERFACE.md  package.xml
src/banana_command/msg/: Detection.msg  DetectionArray.msg  SortCommand.msg
src/banana_perception/: package.xml  requirements.txt  setup.cfg  setup.py
src/banana_perception/banana_perception/: agent.py  agent_node.py  detector.py  fake_camera.py  filter.py  node.py
src/banana_perception/config/: handeye_T_base_camera.yaml  perception.yaml
src/banana_perception/launch/: perception.launch.py
src/banana_perception/models/: README.md
src/doosan_mini_project_cpp/: CMakeLists.txt  package.xml
src/doosan_mini_project_cpp/config/: simple_load.rviz
src/doosan_mini_project_cpp/launch/: demo_real.launch.py  demo_virtual.launch.py  doosan_driver.launch.py  simple_rviz.launch.py  simple_rviz_urdf.launch.py
src/doosan_mini_project_cpp/models/gripper/xacro/: robotis_rh_p12_rn.xacro  robotis_rh_p12_rn_gazebo.xacro  robotis_rh_p12_rn_material.xacro
src/doosan_mini_project_cpp/models/robot_arm/urdf/: e0509_with_gripper.urdf
src/doosan_mini_project_cpp/models/robot_arm/xacro/: e0509.gz_ros2_control.xacro  e0509.ros2_control.xacro  e0509.urdf.xacro  macro.e0509.white.xacro  macro.gazebo.xacro  macro.materials.xacro  macro.transmission.xacro
src/doosan_mini_project_cpp/src/: doosan_json_trajectory_executor.py
src/doosan_mini_project_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan_mini_project_moveit_config/config/: e0509.ros2_control.xacro  e0509.srdf  e0509.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/doosan_mini_project_moveit_config/include/doosan_mini_project_moveit_config/: mtc_task_node.hpp
src/doosan_mini_project_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  mtc_command.launch.py  mtc_demo.launch.py  pick_and_place.launch.py  pick_and_place_system.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/doosan_mini_project_moveit_config/msg/: PickPlaceCommand.msg
src/doosan_mini_project_moveit_config/src/: machine_tending_v1.cpp  machine_tending_v2.cpp  machine_tending_v3.cpp  mtc_node.cpp  mtc_node_backup.cpp  mtc_task_node.cpp  pick_place_command_node.cpp
src/doosan_mini_project_moveit_config/trajectories/test/: 2026_07_15_17_15_22_solution_trajectories.json
src/doosan_mini_project_moveit_config/trajectories/test/backup/: 2026_07_15_18_07_34_solution_trajectories.json  2026_07_15_18_44_27_solution_trajectories.json
tools/: cam_capture.py  cam_view.py  infer_test.py  mock_moveit.py
