<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>banana_bridge</name>
  <version>0.1.0</version>
  <description>웹 게이트웨이: Starlette WS + LLM + rclpy publish/subscribe + aiortc WebRTC</description>
  <maintainer email="wkdqkdgud@gmail.com">vanillaturtlechips</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>banana_command</exec_depend>
  <!-- TODO: aggregator SystemState 패키지 의존 추가 -->

  <!-- pip 의존(starlette, uvicorn, aiortc, av, httpx, pydantic)은 requirements.txt 참고 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
